Machine_Independent_Optimization/y.output
State 161 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: prog type id_list ';'
    2     | prog type Ident '(' SetFnInfo parm_types ')' fprotRest
    3     | prog Extern type Ident '(' SetFnInfo parm_types ')' fprotRest

    4 $@1: %empty

    5 prog: prog type Ident '(' SetFnInfo parm_types ')' '{' $@1 var_decls stmt_list '}'
    6     | %empty

    7 Extern: EXTERN

    8 SetFnInfo: %empty

    9 $@2: %empty

   10 fprotRest: comma $@2 fprototype SetFnInfo fprotRest
   11          | ';'

   12 fprototype: Ident '(' parm_types ')'

   13 parm_types: VOID
   14           | nonempty_parm_type_list

   15 nonempty_parm_type_list: nonempty_parm_type_list comma parm_type_decl
   16                        | parm_type_decl

   17 parm_type_decl: type Ident
   18               | type Ident '[' ']'

   19 type: INT
   20     | CHAR
   21     | VOID

   22 var_decls: var_decls var_decl ';'
   23          | %empty

   24 var_decl: type id_list

   25 $@3: %empty

   26 id_list: id_list comma $@3 id_decl

   27 $@4: %empty

   28 id_list: error comma $@4 id_decl
   29        | id_decl

   30 id_decl: Ident
   31        | Ident '[' ArraySize ']'

   32 ArraySize: INTCON

   33 stmt_list: stmt stmt_list
   34          | %empty

   35 stmt: IF '(' boolexp ')' stmt optional_else
   36     | WHILE '(' boolexp ')' stmt
   37     | FOR '(' optional_assgt semicolon optional_boolexp semicolon optional_assgt ')' stmt
   38     | RETURN optional_expr semicolon
   39     | assignment semicolon
   40     | proc_call semicolon
   41     | compound_stmt
   42     | ';'
   43     | error

   44 semicolon: ';'

   45 $@5: %empty

   46 semicolon: $@5 error

   47 comma: ','

   48 $@6: %empty

   49 comma: $@6 error

   50 compound_stmt: '{' stmt_list '}'

   51 optional_else: ELSE stmt
   52              | %empty

   53 optional_assgt: assignment
   54               | %empty

   55 optional_expr: expr
   56              | %empty

   57 optional_boolexp: boolexp
   58                 | %empty

   59 assignment: variable '=' expr

   60 boolexp: expr EQ expr
   61        | expr NEQ expr
   62        | expr LE expr
   63        | expr GE expr
   64        | expr '<' expr
   65        | expr '>' expr
   66        | '!' boolexp
   67        | boolexp AND boolexp
   68        | boolexp OR boolexp
   69        | '(' boolexp ')'

   70 expr: '-' expr
   71     | expr '+' expr
   72     | expr '-' expr
   73     | expr '*' expr
   74     | expr '/' expr
   75     | fun_call
   76     | variable
   77     | '(' expr ')'
   78     | '(' error ')'
   79     | INTCON
   80     | CHARCON
   81     | STRINGCON

   82 fun_call: Ident '(' ')'
   83         | Ident '(' expr_list ')'
   84         | Ident '(' error ')'

   85 proc_call: Ident '(' ')'
   86          | Ident '(' expr_list ')'
   87          | Ident '(' error ')'

   88 variable: Ident
   89         | Ident '[' expr ']'
   90         | Ident '[' error ']'

   91 expr_list: expr comma expr_list
   92          | expr

   93 Ident: ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 66
'(' (40) 2 3 5 12 35 36 37 69 77 78 82 83 84 85 86 87
')' (41) 2 3 5 12 35 36 37 69 77 78 82 83 84 85 86 87
'*' (42) 73
'+' (43) 71
',' (44) 47
'-' (45) 70 72
'/' (47) 74
';' (59) 1 11 22 42 44
'<' (60) 64
'=' (61) 59
'>' (62) 65
'[' (91) 18 31 89 90
']' (93) 18 31 89 90
'{' (123) 5 50
'}' (125) 5 50
error (256) 28 43 46 49 78 84 87 90
ID (258) 93
INTCON (259) 32 79
CHARCON (260) 80
STRINGCON (261) 81
CHAR (262) 20
INT (263) 19
VOID (264) 13 21
EXTERN (265) 7
IF (266) 35
ELSE (267) 51
WHILE (268) 36
FOR (269) 37
RETURN (270) 38
AND (271) 67
OR (272) 68
EQ (273) 60
NEQ (274) 61
LE (275) 62
GE (276) 63


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
prog (39)
    on left: 1 2 3 5 6, on right: 0 1 2 3 5
$@1 (40)
    on left: 4, on right: 5
Extern (41)
    on left: 7, on right: 3
SetFnInfo (42)
    on left: 8, on right: 2 3 5 10
fprotRest (43)
    on left: 10 11, on right: 2 3 10
$@2 (44)
    on left: 9, on right: 10
fprototype (45)
    on left: 12, on right: 10
parm_types (46)
    on left: 13 14, on right: 2 3 5 12
nonempty_parm_type_list (47)
    on left: 15 16, on right: 14 15
parm_type_decl (48)
    on left: 17 18, on right: 15 16
type (49)
    on left: 19 20 21, on right: 1 2 3 5 17 18 24
var_decls (50)
    on left: 22 23, on right: 5 22
var_decl (51)
    on left: 24, on right: 22
id_list (52)
    on left: 26 28 29, on right: 1 24 26
$@3 (53)
    on left: 25, on right: 26
$@4 (54)
    on left: 27, on right: 28
id_decl (55)
    on left: 30 31, on right: 26 28 29
ArraySize (56)
    on left: 32, on right: 31
stmt_list (57)
    on left: 33 34, on right: 5 33 50
stmt (58)
    on left: 35 36 37 38 39 40 41 42 43, on right: 33 35 36 37 51
semicolon (59)
    on left: 44 46, on right: 37 38 39 40
$@5 (60)
    on left: 45, on right: 46
comma (61)
    on left: 47 49, on right: 10 15 26 28 91
$@6 (62)
    on left: 48, on right: 49
compound_stmt (63)
    on left: 50, on right: 41
optional_else (64)
    on left: 51 52, on right: 35
optional_assgt (65)
    on left: 53 54, on right: 37
optional_expr (66)
    on left: 55 56, on right: 38
optional_boolexp (67)
    on left: 57 58, on right: 37
assignment (68)
    on left: 59, on right: 39 53
boolexp (69)
    on left: 60 61 62 63 64 65 66 67 68 69, on right: 35 36 57 66 67
    68 69
expr (70)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81, on right: 55 59 60
    61 62 63 64 65 70 71 72 73 74 77 89 91 92
fun_call (71)
    on left: 82 83 84, on right: 75
proc_call (72)
    on left: 85 86 87, on right: 40
variable (73)
    on left: 88 89 90, on right: 59 76
expr_list (74)
    on left: 91 92, on right: 83 86 91
Ident (75)
    on left: 93, on right: 2 3 5 12 17 18 30 31 82 83 84 85 86 87 88
    89 90


State 0

    0 $accept: . prog $end

    $default  reduce using rule 6 (prog)

    prog  go to state 1


State 1

    0 $accept: prog . $end
    1 prog: prog . type id_list ';'
    2     | prog . type Ident '(' SetFnInfo parm_types ')' fprotRest
    3     | prog . Extern type Ident '(' SetFnInfo parm_types ')' fprotRest
    5     | prog . type Ident '(' SetFnInfo parm_types ')' '{' $@1 var_decls stmt_list '}'

    $end    shift, and go to state 2
    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    VOID    shift, and go to state 5
    EXTERN  shift, and go to state 6

    Extern  go to state 7
    type    go to state 8


State 2

    0 $accept: prog $end .

    $default  accept


State 3

   20 type: CHAR .

    $default  reduce using rule 20 (type)


State 4

   19 type: INT .

    $default  reduce using rule 19 (type)


State 5

   21 type: VOID .

    $default  reduce using rule 21 (type)


State 6

    7 Extern: EXTERN .

    $default  reduce using rule 7 (Extern)


State 7

    3 prog: prog Extern . type Ident '(' SetFnInfo parm_types ')' fprotRest

    CHAR  shift, and go to state 3
    INT   shift, and go to state 4
    VOID  shift, and go to state 5

    type  go to state 9


State 8

    1 prog: prog type . id_list ';'
    2     | prog type . Ident '(' SetFnInfo parm_types ')' fprotRest
    5     | prog type . Ident '(' SetFnInfo parm_types ')' '{' $@1 var_decls stmt_list '}'

    error  shift, and go to state 10
    ID     shift, and go to state 11

    id_list  go to state 12
    id_decl  go to state 13
    Ident    go to state 14


State 9

    3 prog: prog Extern type . Ident '(' SetFnInfo parm_types ')' fprotRest

    ID  shift, and go to state 11

    Ident  go to state 15


State 10

   28 id_list: error . comma $@4 id_decl

    ','  shift, and go to state 16

    $default  reduce using rule 48 ($@6)

    comma  go to state 17
    $@6    go to state 18


State 11

   93 Ident: ID .

    $default  reduce using rule 93 (Ident)


State 12

    1 prog: prog type id_list . ';'
   26 id_list: id_list . comma $@3 id_decl

    ','  shift, and go to state 16
    ';'  shift, and go to state 19

    $default  reduce using rule 48 ($@6)

    comma  go to state 20
    $@6    go to state 18


State 13

   29 id_list: id_decl .

    $default  reduce using rule 29 (id_list)


State 14

    2 prog: prog type Ident . '(' SetFnInfo parm_types ')' fprotRest
    5     | prog type Ident . '(' SetFnInfo parm_types ')' '{' $@1 var_decls stmt_list '}'
   30 id_decl: Ident .
   31        | Ident . '[' ArraySize ']'

    '('  shift, and go to state 21
    '['  shift, and go to state 22

    $default  reduce using rule 30 (id_decl)


State 15

    3 prog: prog Extern type Ident . '(' SetFnInfo parm_types ')' fprotRest

    '('  shift, and go to state 23


State 16

   47 comma: ',' .

    $default  reduce using rule 47 (comma)


State 17

   28 id_list: error comma . $@4 id_decl

    $default  reduce using rule 27 ($@4)

    $@4  go to state 24


State 18

   49 comma: $@6 . error

    error  shift, and go to state 25


State 19

    1 prog: prog type id_list ';' .

    $default  reduce using rule 1 (prog)


State 20

   26 id_list: id_list comma . $@3 id_decl

    $default  reduce using rule 25 ($@3)

    $@3  go to state 26


State 21

    2 prog: prog type Ident '(' . SetFnInfo parm_types ')' fprotRest
    5     | prog type Ident '(' . SetFnInfo parm_types ')' '{' $@1 var_decls stmt_list '}'

    $default  reduce using rule 8 (SetFnInfo)

    SetFnInfo  go to state 27


State 22

   31 id_decl: Ident '[' . ArraySize ']'

    INTCON  shift, and go to state 28

    ArraySize  go to state 29


State 23

    3 prog: prog Extern type Ident '(' . SetFnInfo parm_types ')' fprotRest

    $default  reduce using rule 8 (SetFnInfo)

    SetFnInfo  go to state 30


State 24

   28 id_list: error comma $@4 . id_decl

    ID  shift, and go to state 11

    id_decl  go to state 31
    Ident    go to state 32


State 25

   49 comma: $@6 error .

    $default  reduce using rule 49 (comma)


State 26

   26 id_list: id_list comma $@3 . id_decl

    ID  shift, and go to state 11

    id_decl  go to state 33
    Ident    go to state 32


State 27

    2 prog: prog type Ident '(' SetFnInfo . parm_types ')' fprotRest
    5     | prog type Ident '(' SetFnInfo . parm_types ')' '{' $@1 var_decls stmt_list '}'

    CHAR  shift, and go to state 3
    INT   shift, and go to state 4
    VOID  shift, and go to state 34

    parm_types               go to state 35
    nonempty_parm_type_list  go to state 36
    parm_type_decl           go to state 37
    type                     go to state 38


State 28

   32 ArraySize: INTCON .

    $default  reduce using rule 32 (ArraySize)


State 29

   31 id_decl: Ident '[' ArraySize . ']'

    ']'  shift, and go to state 39


State 30

    3 prog: prog Extern type Ident '(' SetFnInfo . parm_types ')' fprotRest

    CHAR  shift, and go to state 3
    INT   shift, and go to state 4
    VOID  shift, and go to state 34

    parm_types               go to state 40
    nonempty_parm_type_list  go to state 36
    parm_type_decl           go to state 37
    type                     go to state 38


State 31

   28 id_list: error comma $@4 id_decl .

    $default  reduce using rule 28 (id_list)


State 32

   30 id_decl: Ident .
   31        | Ident . '[' ArraySize ']'

    '['  shift, and go to state 22

    $default  reduce using rule 30 (id_decl)


State 33

   26 id_list: id_list comma $@3 id_decl .

    $default  reduce using rule 26 (id_list)


State 34

   13 parm_types: VOID .
   21 type: VOID .

    ID        reduce using rule 21 (type)
    $default  reduce using rule 13 (parm_types)


State 35

    2 prog: prog type Ident '(' SetFnInfo parm_types . ')' fprotRest
    5     | prog type Ident '(' SetFnInfo parm_types . ')' '{' $@1 var_decls stmt_list '}'

    ')'  shift, and go to state 41


State 36

   14 parm_types: nonempty_parm_type_list .
   15 nonempty_parm_type_list: nonempty_parm_type_list . comma parm_type_decl

    ','  shift, and go to state 16

    error     reduce using rule 48 ($@6)
    $default  reduce using rule 14 (parm_types)

    comma  go to state 42
    $@6    go to state 18


State 37

   16 nonempty_parm_type_list: parm_type_decl .

    $default  reduce using rule 16 (nonempty_parm_type_list)


State 38

   17 parm_type_decl: type . Ident
   18               | type . Ident '[' ']'

    ID  shift, and go to state 11

    Ident  go to state 43


State 39

   31 id_decl: Ident '[' ArraySize ']' .

    $default  reduce using rule 31 (id_decl)


State 40

    3 prog: prog Extern type Ident '(' SetFnInfo parm_types . ')' fprotRest

    ')'  shift, and go to state 44


State 41

    2 prog: prog type Ident '(' SetFnInfo parm_types ')' . fprotRest
    5     | prog type Ident '(' SetFnInfo parm_types ')' . '{' $@1 var_decls stmt_list '}'

    ','  shift, and go to state 16
    ';'  shift, and go to state 45
    '{'  shift, and go to state 46

    $default  reduce using rule 48 ($@6)

    fprotRest  go to state 47
    comma      go to state 48
    $@6        go to state 18


State 42

   15 nonempty_parm_type_list: nonempty_parm_type_list comma . parm_type_decl

    CHAR  shift, and go to state 3
    INT   shift, and go to state 4
    VOID  shift, and go to state 5

    parm_type_decl  go to state 49
    type            go to state 38


State 43

   17 parm_type_decl: type Ident .
   18               | type Ident . '[' ']'

    '['  shift, and go to state 50

    $default  reduce using rule 17 (parm_type_decl)


State 44

    3 prog: prog Extern type Ident '(' SetFnInfo parm_types ')' . fprotRest

    ','  shift, and go to state 16
    ';'  shift, and go to state 45

    $default  reduce using rule 48 ($@6)

    fprotRest  go to state 51
    comma      go to state 48
    $@6        go to state 18


State 45

   11 fprotRest: ';' .

    $default  reduce using rule 11 (fprotRest)


State 46

    5 prog: prog type Ident '(' SetFnInfo parm_types ')' '{' . $@1 var_decls stmt_list '}'

    $default  reduce using rule 4 ($@1)

    $@1  go to state 52


State 47

    2 prog: prog type Ident '(' SetFnInfo parm_types ')' fprotRest .

    $default  reduce using rule 2 (prog)


State 48

   10 fprotRest: comma . $@2 fprototype SetFnInfo fprotRest

    $default  reduce using rule 9 ($@2)

    $@2  go to state 53


State 49

   15 nonempty_parm_type_list: nonempty_parm_type_list comma parm_type_decl .

    $default  reduce using rule 15 (nonempty_parm_type_list)


State 50

   18 parm_type_decl: type Ident '[' . ']'

    ']'  shift, and go to state 54


State 51

    3 prog: prog Extern type Ident '(' SetFnInfo parm_types ')' fprotRest .

    $default  reduce using rule 3 (prog)


State 52

    5 prog: prog type Ident '(' SetFnInfo parm_types ')' '{' $@1 . var_decls stmt_list '}'

    $default  reduce using rule 23 (var_decls)

    var_decls  go to state 55


State 53

   10 fprotRest: comma $@2 . fprototype SetFnInfo fprotRest

    ID  shift, and go to state 11

    fprototype  go to state 56
    Ident       go to state 57


State 54

   18 parm_type_decl: type Ident '[' ']' .

    $default  reduce using rule 18 (parm_type_decl)


State 55

    5 prog: prog type Ident '(' SetFnInfo parm_types ')' '{' $@1 var_decls . stmt_list '}'
   22 var_decls: var_decls . var_decl ';'

    error   shift, and go to state 58
    ID      shift, and go to state 11
    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    VOID    shift, and go to state 5
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    FOR     shift, and go to state 61
    RETURN  shift, and go to state 62
    ';'     shift, and go to state 63
    '{'     shift, and go to state 64

    '}'  reduce using rule 34 (stmt_list)

    type           go to state 65
    var_decl       go to state 66
    stmt_list      go to state 67
    stmt           go to state 68
    compound_stmt  go to state 69
    assignment     go to state 70
    proc_call      go to state 71
    variable       go to state 72
    Ident          go to state 73


State 56

   10 fprotRest: comma $@2 fprototype . SetFnInfo fprotRest

    $default  reduce using rule 8 (SetFnInfo)

    SetFnInfo  go to state 74


State 57

   12 fprototype: Ident . '(' parm_types ')'

    '('  shift, and go to state 75


State 58

   43 stmt: error .

    $default  reduce using rule 43 (stmt)


State 59

   35 stmt: IF . '(' boolexp ')' stmt optional_else

    '('  shift, and go to state 76


State 60

   36 stmt: WHILE . '(' boolexp ')' stmt

    '('  shift, and go to state 77


State 61

   37 stmt: FOR . '(' optional_assgt semicolon optional_boolexp semicolon optional_assgt ')' stmt

    '('  shift, and go to state 78


State 62

   38 stmt: RETURN . optional_expr semicolon

    ID         shift, and go to state 11
    INTCON     shift, and go to state 79
    CHARCON    shift, and go to state 80
    STRINGCON  shift, and go to state 81
    '-'        shift, and go to state 82
    '('        shift, and go to state 83

    $default  reduce using rule 56 (optional_expr)

    optional_expr  go to state 84
    expr           go to state 85
    fun_call       go to state 86
    variable       go to state 87
    Ident          go to state 88


State 63

   42 stmt: ';' .

    $default  reduce using rule 42 (stmt)


State 64

   50 compound_stmt: '{' . stmt_list '}'

    error   shift, and go to state 58
    ID      shift, and go to state 11
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    FOR     shift, and go to state 61
    RETURN  shift, and go to state 62
    ';'     shift, and go to state 63
    '{'     shift, and go to state 64

    '}'  reduce using rule 34 (stmt_list)

    stmt_list      go to state 89
    stmt           go to state 68
    compound_stmt  go to state 69
    assignment     go to state 70
    proc_call      go to state 71
    variable       go to state 72
    Ident          go to state 73


State 65

   24 var_decl: type . id_list

    error  shift, and go to state 10
    ID     shift, and go to state 11

    id_list  go to state 90
    id_decl  go to state 13
    Ident    go to state 32


State 66

   22 var_decls: var_decls var_decl . ';'

    ';'  shift, and go to state 91


State 67
